[build-system]
    requires = ["setuptools>=61.0.0", "wheel"]
    build-backend = "setuptools.build_meta"

[project]
    name = "bob.measure"
    version = "6.1.0"
    requires-python = ">=3.9"
    description = "Evaluation metrics for Bob"
    dynamic = ["readme"]
    license = {text = "BSD 3-Clause License"}
    authors = [
    {name = "Andre Anjos", email = "andre.anjos@idiap.ch"},
    ]
    keywords = ["bob", "pipelines"]

    classifiers=[
        "Framework :: Bob",
        "Development Status :: 4 - Beta",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: BSD License",
        "Natural Language :: English",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Topic :: Software Development :: Libraries :: Python Modules",
    ]
    dependencies = [
        "bob==12.0.0",
        "bob.io.base==5.1.0",
        "clapper==1.0.1",
        "h5py==3.7.0",
        "matplotlib==3.6.2",
        "numba==0.56.4",
        "numpy==1.23.5",
        "scipy==1.10.0",
        "tabulate==0.9.0",
    ]

[project.urls]
    documentation = "https://www.idiap.ch/software/bob/docs/bob/bob.measure/v6.1.0/sphinx/"
    homepage = "https://pypi.org/project/bob.measure/"
    repository = "https://gitlab.idiap.ch/bob/bob.measure"
    changelog = "https://gitlab.idiap.ch/bob/bob.measure/-/releases"

[project.optional-dependencies]
    qa = ["pre-commit"]
    doc = [
        "sphinx==5.3.0",
        "sphinx-rtd-theme==1.1.1",
        "sphinx-autodoc-typehints==1.21.8",
        "auto-intersphinx==1.0.2",
        "sphinxcontrib-programoutput==0.17",
        "matplotlib==3.6.2",
        ]
    test = [
        "pytest==7.2.1",
        "pytest-cov==4.0.0",
        "coverage==7.0.5",
        ]

[tool.setuptools]
    zip-safe = false
    package-dir = {"" = "src"}

[tool.setuptools.dynamic]
    readme = {file = "README.md", content-type = "text/markdown"}

[project.entry-points."bob.cli"]
    measure  = "bob.measure.script.measure:measure"

[project.entry-points."bob.measure.cli"]
    evaluate = "bob.measure.script.commands:evaluate"
    metrics =  "bob.measure.script.commands:metrics"
    multi-metrics = "bob.measure.script.commands:multi_metrics"
    roc = "bob.measure.script.commands:roc"
    det = "bob.measure.script.commands:det"
    epc = "bob.measure.script.commands:epc"
    hist = "bob.measure.script.commands:hist"
    gen = "bob.measure.script.gen:gen"

[tool.distutils.bdist_wheel]
    universal = true
[tool.isort]
    profile = "black"
    line_length = 80
    order_by_type = true
    lines_between_types = 1

[tool.black]
    line-length = 80

[tool.pytest.ini_options]
    addopts = [
        "--import-mode=append",
        "--cov-report=term-missing",
        "--cov=bob.measure",
    ]
    junit_logging = "all"
    junit_log_passing_tests = false

[profile]
    repository_url = "git@gitlab.idiap.ch:bob/dev-profile.git"
    commit_hash = "ade723be1f11feddb7bece235de32cc98953dc07"
